tests/diagnostics/catalog/snapshots/ir/IR0069.snap
error[IR0069]: IR_E_VERIFY_FAILED
 --> tests/diagnostics/catalog/sources/ir/IR0069.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0069
  = help: keep IR validation diagnostics structured and catalog-backed
